# cmudict-fast

./: .gitlab-ci.yml  Cargo.toml  README.md
.cargo/: config
cmudict/: Cargo.toml  LICENSE-CMUDICT  build.rs  build.rs.old
cmudict/examples/: apple_lookup.rs
cmudict/src/: errors.rs  lib.rs
cmudict_core/: Cargo.toml  LICENSE-MIT
cmudict_core/src/: errors.rs  lib.rs
examples/: apple_lookup.rs
src/: core.rs  errors.rs  lib.rs
