[package]
name = "cmudict-fast"
edition = "2018"
version = "0.6.0"
authors = [
    "Benjamin Hinchliff <benjamin.hinchiff@gmail.com>",
    "Paul Woolcock <paul@woolcock.us>",
]
repository = "https://github.com/BenjaminHinchliff/cmudict-fast.git"
homepage = "https://github.com/BenjaminHinchliff/cmudict-fast"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/cmudict-fast"
description = """
An updated and improved fork of the library for using the CMUSphinx
pronunciation dictionary
"""
readme = "README.md"
keywords = ["cmudict"]
categories = ["parser-implementations"]
exclude = [
    ".github/**/*"
]

[features]
all = ["serialization"]
serialization = ["serde"]

[dependencies]
thiserror = "1.0.24"
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
pretty_assertions = "0.6.1"
bincode = "1.3.2"
