[package]
name = "cmudict"
version = "0.2.1"
authors = ["Paul Woolcock <paul@woolcock.us>"]
repository = "https://gitlab.com/pwoolcoc/cmudict"
homepage = "https://github.com/pwoolcoc/cmudict"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/cmudict"
description = """
Library for using the CMUSphinx pronunciation dictionary
"""

[dependencies]
cmudict_core = "0.1.1"
indexed-line-reader = "0.2.0"
error-chain = "0.11.0"
reqwest = "0.8.2"
tempdir = "0.3.5"
log = "0.4.1"
radix_trie = "0.1.3"
