[package]
name = "cmudict"
version = "0.3.1"
authors = ["Paul Woolcock <paul@woolcock.us>"]
repository = "https://gitlab.com/pwoolcoc/cmudict"
homepage = "https://github.com/pwoolcoc/cmudict"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/cmudict"
description = """
Library for using the CMUSphinx pronunciation dictionary
"""

[dependencies]
cmudict_core = { path = "../cmudict_core" }
indexed-line-reader = "0.2.0"
log = "0.4.1"
radix_trie = "0.2.1"
thiserror = "1.0.24"
