[package]
name = "cmudict"
edition = "2018"
version = "0.3.1"
authors = ["Paul Woolcock <paul@woolcock.us>"]
repository = "https://gitlab.com/pwoolcoc/cmudict"
homepage = "https://github.com/pwoolcoc/cmudict"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/cmudict"
description = """
Library for using the CMUSphinx pronunciation dictionary
"""

[dependencies]
cmudict_core = { path = "../cmudict_core" }
radix_trie = "0.2.1"
thiserror = "1.0.24"
