[package]
name = "cmudict_core"
version = "0.3.0"
authors = ["Paul Woolcock <paul@woolcock.us>"]
repository = "https://gitlab.com/pwoolcoc/cmudict"
homepage = "https://github.com/pwoolcoc/cmudict"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/cmudict_core"
edition = "2018"
description = """
Core parsing logic for the cmudict crate
"""

[dependencies]
thiserror = "1.0.24"
