[package]
name = "cmudict_core"
version = "0.3.0"
authors = [
    "Benjamin Hinchliff <benjamin.hinchiff@gmail.com>",
    "Paul Woolcock <paul@woolcock.us>",
]
repository = "https://github.com/BenjaminHinchliff/cmudict-fast.git"
homepage = "https://github.com/BenjaminHinchliff/cmudict-fast"
license = "Apache-2.0"
documentation = "https://docs.rs/cmudict_core"
edition = "2018"
description = """
Core parsing logic for the cmudict crate
"""

[dependencies]
thiserror = "1.0.24"
